---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Payout every 1000 items
    - So apparently modules do not draw on small selection boxes
    - Tinker with the alt mode drawing
    - Cleanup 〃
    - Turn the assembling machine into a furnace
    - Check for flipped
    - Allow the assembler sink to be placed with the underground
    - Make the assembling machine minable
    - Hide awesome combinators from circuit filters
    - Match the sink's assembler name with the linked belt
    - Conceptualize lookup map
    - Prepare to create the other entity in eachothers event
    - Rework creation workflow, and sync module effects
    - Test code of the previous commit ingame
    - Prepare to optimize next quality check
    - Return the spoil result in case the item spoils
    - Flatten the nested ifs
    - Give the awesome sink its own category
    - Add recipes and unlock them with the quality module
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 10. 18
  Info:
    - Prepare awesome shop and sink graphics
    - Setup the entity and item prototypes
    - Prepare tooling needed for the custom surface
    - Tweak linked chest prototype
    - Setup the control circuitry for every surface
    - Rework entities on the hidden surface to make room for multiple forces
    - Create the arithmatic and linked belt on the mod surface
    - Create the belt, loader & infinity chest
    - Remove right side stuff when the linked belt vanishes
    - Handle surface deletion
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 10. 18
  Info:
    - Initial commit